# vrmonitor

./: README.md
api/v1/: query.md
bash/: build.sh
config/rudanmaku/: config.toml
config/rudanmaku-core/: config.toml
config/vrmonitor/: config.toml
deploy/: deploy.sh  launch.sh
server/openapi/: Cargo.toml  config.default.toml
server/openapi/src/: common.rs  config.rs  error.rs  filter.rs  main.rs
server/openapi/src/danmaku/: mod.rs
server/openapi/src/superchat/: mod.rs
server/proxy/: Cargo.toml  config.default.toml
server/proxy/src/: cache.rs  config.rs  main.rs  proxy.rs
web/vrmonitor/: package-lock.json  package.json
web/vrmonitor/src/: App.vue  Router.vue  utils.ts
web/vrmonitor/src/api/: proxy.ts  query.ts
web/vrmonitor/src/components/: LiverCard.vue
web/vrmonitor/src/model/: liver.ts
web/vrmonitor/src/pages/: LiverIndex.vue  NotFound.vue
web/vrmonitor/src/pages/Stat/: DanmakuHistory.vue  Index.vue
