[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1


[dependencies]
toml = "0.5.9"
warp = "0.3.2"
futures = "0.3"
reqwest = "0.11.11"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "*"
features = ["full"]